Fix spacing between section on the frontpage

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -93,6 +93,7 @@
 
 .footer-attribution__link {
   color: var(--secondary);
+  text-decoration: none;
 }
 
 .footer-attribution__link:hover {
